dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/communicat_o__API_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Communication Providers like SMS Providers, Facebook, Whatsapp etc</description>
    <label>Communication Provider</label>
    <pluralLabel>Communication Providers</pluralLabel>
</CustomObject>