dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Allows_Bulk_Messaging__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Allows_Bulk_Messaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Bulk Messaging</label>
    <type>Checkbox</type>
</CustomField>