dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Allows_File_Sharing__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Allows_File_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows File Sharing</label>
    <type>Checkbox</type>
</CustomField>