dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named_Credential</fullName>
                <default>true</default>
                <label>Named Credential</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>