dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Bulk_Messaging_Limit__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Bulk_Messaging_Limit__c</fullName>
    <description>Limit for number of messages that can be sent in one call</description>
    <inlineHelpText>Maximum limit for number of messages in one call is 2000</inlineHelpText>
    <label>Bulk Messaging Limit</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>