dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Class_Name__c</fullName>
    <description>Name of apex class that implements OMessaging</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>