dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Field_Name__c</fullName>
    <description>This is the field name where customer channel id for the corresponding provider will be saved, This will be used to search related customer when an inbound is received.</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>