dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__namespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__namespacePrefix__c</fullName>
    <label>namespacePrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>