dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Outbound_Limits__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Outbound_Limits__c</fullName>
    <label>Outbound Limits</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Limits</fullName>
                <default>true</default>
                <label>No Limits</label>
            </value>
            <value>
                <fullName>Replies Only</fullName>
            </value>
            <value>
                <fullName>Pre-approved Templates Only</fullName>
            </value>
            <value>
                <fullName>Replies &amp; Pre-Approved Templates Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>