dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Provider_Type__c</fullName>
    <label>Provider Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>