dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/fields/communicat_o__Reply_Message_Window__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Reply_Message_Window__c</fullName>
    <description>Message window during which replies can be sent</description>
    <label>Reply Message Window(hrs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>