dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/listViews/communicat_o__All.listView-meta.xml
<ListView>
    <fullName>communicat_o__All</fullName>
    <columns>MasterLabel</columns>
    <columns>communicat_o__namespacePrefix__c</columns>
    <columns>DeveloperName</columns>
    <columns>communicat_o__Class_Name__c</columns>
    <columns>communicat_o__Authentication_Type__c</columns>
    <columns>communicat_o__Field_Name__c</columns>
    <columns>communicat_o__Provider_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>