dynamix/force-app/main/default/objects/communicat_o__API_Configuration__mdt/listViews/communicat_o__Permissions.listView-meta.xml
<ListView>
    <fullName>communicat_o__Permissions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>communicat_o__Allows_Bulk_Messaging__c</columns>
    <columns>communicat_o__Allows_File_Sharing__c</columns>
    <columns>communicat_o__Outbound_Limits__c</columns>
    <columns>communicat_o__Reply_Message_Window__c</columns>
    <columns>communicat_o__Bulk_Messaging_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Permissions</label>
</ListView>